--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/arpit-agr/11ty-starter#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.1"
+    "@11ty/eleventy": "^1.0.1",
+    "two-up-element": "^1.0.1"
   },
   "dependencies": {
+    "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "clean-css": "^5.3.0",
+    "esbuild": "^0.14.49",
     "html-minifier": "^4.0.0"
   }
 }
