--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "clean-css": "^5.3.0",
     "esbuild": "^0.14.49",
-    "html-minifier": "^4.0.0",
-    "netlify-plugin-cache": "^1.0.3"
+    "html-minifier": "^4.0.0"
   }
 }
